--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Wei Zheng (toxic)"
   avatar           : "profile.png"
-  bio              : "Master student at Xidian University, Applied Cryptography, SSE, PPFL"
+  bio              : "Master student at Xidian University, Applied Cryptography, SE, PPFL"
   location         : "Xi'an, China"
   employer         :
   pubmed           : 
