--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Wei Zheng"
   avatar           : "profile.png"
-  bio              : "Master student at Xidian University, Applied Cryptography, SE, PPFL"
-  location         : "Xi'an, China"
+  bio              : "Ph.D. student at School of Computer Science, Nanjing University"
+  location         : "Nanjing, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=DhZHyfQAAAAJ"
-  email            : "zhengwei_1998@stu.xidian.edu.cn"
+  email            : "602024330034@smail.nju.edu.cn"
   researchgate     : "https://www.researchgate.net/profile/Wei-Zheng-128"
   uri              :
   bitbucket        :
