--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=DhZHyfQAAAAJ"
-  email            : "602024330034@smail.nju.edu.cn"
+  email            : "zhengweics@smail.nju.edu.cn"
   researchgate     : "https://www.researchgate.net/profile/Wei-Zheng-128"
   uri              :
   bitbucket        :
